--- a/Dommy.Web/Views/Shared/_Layout.cshtml
+++ b/Dommy.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <script src="Scripts/jquery-2.0.3.min.js" type="text/javascript"></script>
     <script src="Scripts/jquery.signalR-1.1.2.min.js" type="text/javascript"></script>
     <script src="~/signalr/hubs" type="text/javascript"></script> 
+    <link href="~/Css/Dommy.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div>
