Add logger page

--- a/Dommy.Web/Views/Home/Tile.cshtml
+++ b/Dommy.Web/Views/Home/Tile.cshtml
@@ -5,7 +5,8 @@
 
 <div class="tile" style="width:@(Model.Width)px;height:@(Model.Height)px;background-color: @Model.ColorCode">
     <div class="back">
-
+        <span class="id" style="visibility:collapse">@Model.Id</span>
+        <span class="url" style="visibility:collapse">@Model.Url</span>
         <div class="title">@Model.Title</div>
         <div class="content"></div>
     </div>
