--- a/Dommy.Web/Views/Home/Index.cshtml
+++ b/Dommy.Web/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
 
 <h1>Dommy</h1>
 
+<script src="Scripts/Tile.js" type="text/javascript"></script>
 <div class="grid">
     @foreach (var tile in Model.Tiles)
     {
