--- a/Dommy.Web/Views/Shared/_Layout.cshtml
+++ b/Dommy.Web/Views/Shared/_Layout.cshtml
@@ -8,33 +8,14 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>_Layout</title>
-    <script src="Scripts/jquery-2.0.3.min.js" type="text/javascript"></script>
-    <script src="Scripts/jquery.signalR-2.0.1.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/jquery-2.0.3.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/jquery.signalR-2.0.1.min.js" type="text/javascript"></script>
     <script src="~/signalr/hubs" type="text/javascript"></script> 
     <link href="~/Css/Dommy.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div>
         @RenderBody()
-
-    <script type="text/javascript">
-        $(function () {
-            // Proxy created on the fly          
-            var logger = $.connection.logger;
-
-            // Declare a function on the chat hub so the server can invoke it          
-            logger.client.receive = function (message) {
-                $('.logger').append('<li>' + message + '</li>');
-            };
-
-
-            $.connection.hub.start();
-        });
-    </script>
-
-        <div class="logger">
-
-        </div>
     </div>
 </body>
 </html>
