--- a/Dommy.Web/Views/Shared/_Layout.cshtml
+++ b/Dommy.Web/Views/Shared/_Layout.cshtml
@@ -8,10 +8,17 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>_Layout</title>
-    <script src="~/Scripts/jquery-2.0.3.min.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery.signalR-2.0.1.min.js" type="text/javascript"></script>
-    <script src="~/signalr/hubs" type="text/javascript"></script> 
+    <script src="~/Scripts/jquery-2.1.0.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/jquery.signalR-2.0.2.min.js" type="text/javascript"></script>
+    <script src="http://localhost:5557/signalr/hubs" type="text/javascript"></script> 
     <link href="~/Css/Dommy.min.css" rel="stylesheet" type="text/css" />
+
+    <script type="text/javascript">
+        $.connection.hub.url = "http://localhost:5557/signalr";
+        $(document).load(function () {
+            $.connection.hub.start();
+        });
+    </script>
 </head>
 <body>
     <div>
