Add razor template for tiles.

--- a/Dommy.Web/Views/Home/Tile.cshtml
+++ b/Dommy.Web/Views/Home/Tile.cshtml
@@ -10,7 +10,7 @@
         <div class="title">@Model.Title</div>
         <div class="content">
 
-            @{Html.RenderAction("TileRender", new { Tile = @Model });}
+            @{Html.RenderAction("TileRender", new { TileId = Model.Id });}
 
         </div>
     </div>
