--- a/Dommy.Web/Views/Home/TileRender.cshtml
+++ b/Dommy.Web/Views/Home/TileRender.cshtml
@@ -1,6 +1,6 @@
-﻿@model Dommy.Business.Tile
+﻿@model Dommy.Web.Models.HomeTileRenderModel
 @{
     Layout = null;
 }
 
-@Model
+@Html.Raw(Model.Render)
