--- a/Dommy.Web/Css/Dommy.css
+++ b/Dommy.Web/Css/Dommy.css
@@ -10,35 +10,154 @@ body {
 h1 {
   padding: 0 0 0 72px;
 }
-.grid {
-  padding: 0 50px 0 100px;
+.yellowOrange .backColor {
+  background-color: #fbb735;
 }
-.grid .tile {
-  margin: 0 10px 10px 0;
-  float: left;
+.yellowOrange .borderColor {
+  border-color: #fbb735;
 }
-.grid .tile .back {
-  margin-top: -4px;
+.fireBush .backColor {
+  background-color: #e98931;
+}
+.fireBush .borderColor {
+  border-color: #e98931;
+}
+.cinnabar .backColor {
+  background-color: #eb403b;
+}
+.cinnabar .borderColor {
+  border-color: #eb403b;
+}
+.wellRead .backColor {
+  background-color: #b32e37;
+}
+.wellRead .borderColor {
+  border-color: #b32e37;
+}
+.finn .backColor {
+  background-color: #6c2a6a;
+}
+.finn .borderColor {
+  border-color: #6c2a6a;
+}
+.victoria .backColor {
+  background-color: #5c4399;
+}
+.victoria .borderColor {
+  border-color: #5c4399;
+}
+.bayOfMany .backColor {
+  background-color: #274389;
+}
+.bayOfMany .borderColor {
+  border-color: #274389;
+}
+.matisse .backColor {
+  background-color: #1f5ea8;
+}
+.matisse .borderColor {
+  border-color: #1f5ea8;
+}
+.easternBlue .backColor {
+  background-color: #227fb0;
+}
+.easternBlue .borderColor {
+  border-color: #227fb0;
+}
+.scooter .backColor {
+  background-color: #2ab0c5;
+}
+.scooter .borderColor {
+  border-color: #2ab0c5;
+}
+.fountainBlue .backColor {
+  background-color: #5bc4be;
+}
+.fountainBlue .borderColor {
+  border-color: #5bc4be;
+}
+.back {
   width: 100%;
   height: 100%;
-  background: -moz-linear-gradient(top, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0.4)), color-stop(100%, rgba(255, 255, 255, 0)));
-  /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
-  /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
-  /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
-  /* IE10+ */
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
-  /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#66ffffff', endColorstr='#00ffffff', GradientType=0);
-  /* IE6-9 */
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0) 100%);
+}
+.clear {
+  clear: both;
+}
+.gridMenu {
+  position: fixed;
+  width: 155px;
+}
+.gridMenu .menu {
+  position: relative;
+  color: #fff;
+  font-size: 19px;
+  display: block;
+  text-decoration: none;
+}
+.gridMenu .menu .back {
+  padding: 20px 10px;
+  width: 115px;
+  height: 42px;
+}
+.gridMenu .menu .backColor {
+  height: 70px;
+  width: 135px;
+}
+.gridMenu .menu .arrowRight {
+  position: absolute;
+  left: 137px;
+  top: 0px;
+}
+.grid {
+  padding: 0 30px 0 170px;
+}
+.grid .gridSection {
+  padding-bottom: 10px;
+}
+.grid .tile {
+  position: relative;
+  margin: 0 10px 10px 0;
+  float: left;
+  color: #fff;
 }
 .grid .tile .title {
   color: #fff;
-  padding: 4px 8px;
+  position: absolute;
+  left: 20px;
+  bottom: 10px;
+}
+.borderColor {
+  border: 1px solid;
+}
+@keyframes arrowAnimSelected {
+  0% {
+    border-left-width: 0px;
+  }
+  100% {
+    border-left-width: 18px;
+  }
+}
+@keyframes arrowAnimUnSelected {
+  0% {
+    border-left-width: 18px;
+  }
+  100% {
+    border-left-width: 0px;
+  }
+}
+.arrowRight {
+  border-left: 0px solid;
+  border-right: none;
+  border-top: 36px solid transparent !important;
+  border-bottom: 36px solid transparent !important;
+}
+.selected {
+  animation: arrowAnimSelected 1s;
+  border-left-width: 18px;
+}
+.unselected {
+  animation: arrowAnimUnSelected 1s;
 }
 .logger .DEBUG {
   color: green;
@@ -46,4 +165,3 @@ h1 {
 .logger .ERROR {
   color: red;
 }
-/*# sourceMappingURL=Dommy.css.map */
