--- a/Dommy.Web/Css/Dommy.less
+++ b/Dommy.Web/Css/Dommy.less
@@ -1,52 +1,241 @@
 ﻿@fontName: 'Segoe UI';
+@color1: #73B5DD;
 
-html{
-    padding:0;
-    margin:0;
+html {
+    padding: 0;
+    margin: 0;
 }
+
 body {
-    padding:0;
-    margin:0;
-    font-family:@fontName;
+    padding: 0;
+    margin: 0;
+    font-family: @fontName;
 }
 
-h1{
-    padding:0 0 0 72px;
+h1 {
+    padding: 0 0 0 72px;
 }
 
-.grid{
-    padding:0 50px 0 100px;
+// Custom colors
+.yellowOrange {
+    .backColor {
+        background-color: #fbb735;
+    }
 
-    .tile{
-        margin:0 10px 10px 0;
-        float:left;
+    .borderColor {
+        border-color: #fbb735;
+    }
+}
 
-        .back{
-            margin-top:-4px;
-            width:100%;
-            height:100%;
-            background: -moz-linear-gradient(top,  rgba(255,255,255,0.4) 0%, rgba(255,255,255,0) 100%); /* FF3.6+ */
-            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.4)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
-            background: -webkit-linear-gradient(top,  rgba(255,255,255,0.4) 0%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
-            background: -o-linear-gradient(top,  rgba(255,255,255,0.4) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
-            background: -ms-linear-gradient(top,  rgba(255,255,255,0.4) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
-            background: linear-gradient(to bottom,  rgba(255,255,255,0.4) 0%,rgba(255,255,255,0) 100%); /* W3C */
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#66ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+.fireBush {
+    .backColor {
+        background-color: #e98931;
+    }
+
+    .borderColor {
+        border-color: #e98931;
+    }
+}
+
+.cinnabar {
+    .backColor {
+        background-color: #eb403b;
+    }
+
+    .borderColor {
+        border-color: #eb403b;
+    }
+}
+
+.wellRead {
+    .backColor {
+        background-color: #b32e37;
+    }
+
+    .borderColor {
+        border-color: #b32e37;
+    }
+}
+
+.finn {
+    .backColor {
+        background-color: #6c2a6a;
+    }
+
+    .borderColor {
+        border-color: #6c2a6a;
+    }
+}
+
+.victoria {
+    .backColor {
+        background-color: #5c4399;
+    }
+
+    .borderColor {
+        border-color: #5c4399;
+    }
+}
+
+.bayOfMany {
+    .backColor {
+        background-color: #274389;
+    }
+
+    .borderColor {
+        border-color: #274389;
+    }
+}
+
+.matisse {
+    .backColor {
+        background-color: #1f5ea8;
+    }
+
+    .borderColor {
+        border-color: #1f5ea8;
+    }
+}
+
+.easternBlue {
+    .backColor {
+        background-color: #227fb0;
+    }
+
+    .borderColor {
+        border-color: #227fb0;
+    }
+}
+
+.scooter {
+    .backColor {
+        background-color: #2ab0c5;
+    }
+
+    .borderColor {
+        border-color: #2ab0c5;
+    }
+}
+
+.fountainBlue {
+    .backColor {
+        background-color: #5bc4be;
+    }
+
+    .borderColor {
+        border-color: #5bc4be;
+    }
+}
+
+//
+.back {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(255,255,255,0.15) 0%,rgba(255,255,255,0) 100%);
+}
+
+.clear {
+    clear: both;
+}
+
+.gridMenu {
+    position: fixed;
+    width: 155px;
+
+    .menu {
+        position: relative;
+        color: #fff;
+        font-size: 19px;
+        display: block;
+        text-decoration: none;
+
+        .back {
+            padding: 20px 10px;
+            width: 115px;
+            height: 42px;
         }
 
-        .title{
-            color:#fff;
-            padding:4px 8px;
+        .backColor {
+            height: 70px;
+            width: 135px;
+        }
+
+        .arrowRight {
+            position: absolute;
+            left: 137px;
+            top: 0px;
         }
     }
 }
 
+.grid {
+    padding: 0 30px 0 170px;
+
+    .gridSection {
+        padding-bottom: 10px;
+    }
+
+    .tile {
+        position: relative;
+        margin: 0 10px 10px 0;
+        float: left;
+        color: #fff;
+
+        .title {
+            color: #fff;
+            position: absolute;
+            left: 20px;
+            bottom: 10px;
+        }
+    }
+}
+
+.borderColor {
+    border: 1px solid;
+}
+
+@keyframes arrowAnimSelected {
+    0% {
+        border-left-width: 0px;
+    }
+
+    100% {
+        border-left-width: 18px;
+    }
+}
+
+@keyframes arrowAnimUnSelected {
+    0% {
+        border-left-width: 18px;
+    }
+
+    100% {
+        border-left-width: 0px;
+    }
+}
+
+.arrowRight {
+    border-left: 0px solid;
+    border-right: none;
+    border-top: 36px solid transparent !important;
+    border-bottom: 36px solid transparent !important;
+}
+
+.selected {
+    animation: arrowAnimSelected 1s;
+    border-left-width: 18px;
+}
+
+.unselected {
+    animation: arrowAnimUnSelected 1s;
+}
 
 .logger {
     .DEBUG {
-        color:green;
+        color: green;
     }
+
     .ERROR {
-        color:red;
+        color: red;
     }
 }
