--- a/Dommy.Web/Css/Dommy.less
+++ b/Dommy.Web/Css/Dommy.less
@@ -189,8 +189,8 @@ h1 {
     }
 
     .tile {
-        position: relative;
-        margin: 0 @tileMarge @tileMarge 0;
+        /*position: relative;*/
+        padding: 0 @tileMarge @tileMarge 0;
         /*float: left;*/
         color: #fff;
 
@@ -207,7 +207,7 @@ h1 {
             height: @smallHeight;
         }
 
-        .tile.medium {
+        .tile .medium {
             width: @mediumWidth;
             height: @mediumHeight;
         }
