--- a/Dommy.Web/Css/Dommy.css
+++ b/Dommy.Web/Css/Dommy.css
@@ -117,6 +117,7 @@ h1 {
   display: inline-grid;
 }
 .grid .tile {
+  transition: transform ease-out 0.5s;
   /*position: relative;*/
   padding: 0 10px 10px 0;
   /*float: left;*/
@@ -145,7 +146,7 @@ h1 {
   height: 310px;
 }
 .grid .tile.selected {
-  border: 1px solid black;
+  transform: scale(1.15) !important;
 }
 @keyframes floatAnimation1 {
   0% {
@@ -226,6 +227,9 @@ h1 {
   100% {
     margin: 5px 15px 15px 5px;
   }
+}
+.grid.edit .tile {
+  transform: scale(0.95);
 }
 .grid.edit .tile.small {
   width: 60px;
