--- a/Dommy.Web/Css/Dommy.css
+++ b/Dommy.Web/Css/Dommy.css
@@ -115,9 +115,10 @@ h1 {
 .grid .gridSection {
   padding-bottom: 10px;
   display: inline-grid;
+  transition: width ease-out 0.2s, height ease-out 0.2s;
 }
 .grid .tile {
-  transition: transform ease-out 0.5s;
+  transition: left ease-out 0.2s, top ease-out 0.2s, transform ease-out 0.5s;
   /*position: relative;*/
   padding: 0 10px 10px 0;
   /*float: left;*/
@@ -129,19 +130,23 @@ h1 {
   left: 20px;
   bottom: 10px;
 }
-.grid .tile.small {
+.grid .tile .small {
+  transition: height ease-out 0.2s, width ease-out 0.2s;
   width: 70px;
   height: 70px;
 }
 .grid .tile .medium {
+  transition: height ease-out 0.2s, width ease-out 0.2s;
   width: 150px;
   height: 150px;
 }
-.grid .tile.mediumLine {
-  width: 150px;
-  height: 70px;
+.grid .tile .largeLine {
+  transition: height ease-out 0.2s, width ease-out 0.2s;
+  width: 310px;
+  height: 150px;
 }
-.grid .tile.large {
+.grid .tile .large {
+  transition: height ease-out 0.2s, width ease-out 0.2s;
   width: 310px;
   height: 310px;
 }
@@ -228,24 +233,26 @@ h1 {
     margin: 5px 15px 15px 5px;
   }
 }
+.grid.edit .flecheTile {
+  background-repeat: no-repeat;
+  z-index: 1;
+  width: 40px;
+  height: 40px;
+}
+.grid.edit .flecheTile.d {
+  background-image: url(/Images/FlecheD.png);
+}
+.grid.edit .flecheTile.bd {
+  background-image: url(/Images/FlecheBD.png);
+}
+.grid.edit .flecheTile.b {
+  background-image: url(/Images/FlecheB.png);
+}
+.grid.edit .flecheTile.hg {
+  background-image: url(/Images/FlecheHG.png);
+}
 .grid.edit .tile {
-  transform: scale(0.95);
-}
-.grid.edit .tile.small {
-  width: 60px;
-  height: 60px;
-}
-.grid.edit .tile.medium {
-  width: 140px;
-  height: 140px;
-}
-.grid.edit .tile.mediumLine {
-  width: 140px;
-  height: 60px;
-}
-.grid.edit .tile.large {
-  width: 300px;
-  height: 300px;
+  transform: scale(0.8);
 }
 .borderColor {
   border: 1px solid;
