--- a/Dommy.Web/Views/Home/Index.cshtml
+++ b/Dommy.Web/Views/Home/Index.cshtml
@@ -24,6 +24,7 @@
 </div>
 
 <div class="grid">
+    <div class="flecheTile"></div>
     @foreach (var sectionModel in Model.Sections)
     {
         <div id="section@(sectionModel.Id)" class="gridSection">
