--- a/Dommy.Web/Views/Home/Index.cshtml
+++ b/Dommy.Web/Views/Home/Index.cshtml
@@ -6,34 +6,41 @@
 <h1>Dommy</h1>
 
 <script src="Scripts/Tile.js" type="text/javascript"></script>
-<div class="gridMenu">
-    @foreach (var sectionModel in Model.Sections)
-    {
-        <a class="menu @sectionModel.Color.ToString().LowerFirstChar()" href="#section@(sectionModel.Id)">
-            <span class="id" style="display:none">@sectionModel.Id</span>
+<div ng-controller="TilesController">
+    <div class="gridMenu" ng-repeat="section in sections">
+        <a class="menu {{section.Color}}" href="#section{{section.Id}}">
+            <span class="id" style="display:none">{{section.Id}}</span>
             <div class="backColor borderColor">
                 <div class="back">
-                    @sectionModel.Name
+                    {{section.Name}}
                 </div>
             </div>
             <div class="borderColor arrowRight">
 
             </div>
         </a>
-    }
-</div>
+    </div>
 
-<div class="grid">
-    <div class="flecheTile"></div>
-    @foreach (var sectionModel in Model.Sections)
-    {
-        <div id="section@(sectionModel.Id)" class="gridSection">
-            @foreach (var tile in sectionModel.Tiles)
-            {
-                Html.RenderPartial("Tile", tile);
-            }
+    <div class="grid">
+        <div class="flecheTile"></div>
+        <div ng-repeat="section in sections">
+            <div id="section{{section.Id}}" class="gridSection">
+                <div ng-repeat="tile in sections.Tiles">
+                    <div class="tile {{tile.Color}}">
+                        <div class="borderColor backColor {{tile.Size}}">
+                            <div class="back">
+                                <span class="id" style="visibility:collapse">{{tile.Id}}</span>
+                                <span class="url" style="visibility:collapse">{{tile.Url}}</span>
+                                <div class="title">{{tile.Title}}</div>
+                                <div class="content" ng-include="/home/tilerender/{{tile.Id}}">
 
-            <div class="clear"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="clear"></div>
+            </div>
         </div>
-    }
+    </div>
 </div>
