--- a/Dommy.Web/Views/Shared/_Layout.cshtml
+++ b/Dommy.Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 
 <!DOCTYPE html>
 
-<html>
+<html ng-app>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>_Layout</title>
