--- a/Dommy.Web/Views/Home/Index.cshtml
+++ b/Dommy.Web/Views/Home/Index.cshtml
@@ -5,10 +5,11 @@
 
 <h1>Dommy</h1>
 
-<script src="Scripts/Tile.js" type="text/javascript"></script>
+@*<script src="Scripts/Tile.js" type="text/javascript"></script>*@
+<script src="Scripts/Controllers/TilesController.js" type="text/javascript"></script>
 <div ng-controller="TilesController">
-    <div class="gridMenu" ng-repeat="section in sections">
-        <a class="menu {{section.Color}}" href="#section{{section.Id}}">
+    <div class="gridMenu">
+        <a class="menu {{section.Color | ColorCss}}" href="#section{{section.Id}}" ng-repeat="section in sections">
             <span class="id" style="display:none">{{section.Id}}</span>
             <div class="backColor borderColor">
                 <div class="back">
@@ -23,24 +24,20 @@
 
     <div class="grid">
         <div class="flecheTile"></div>
-        <div ng-repeat="section in sections">
-            <div id="section{{section.Id}}" class="gridSection">
-                <div ng-repeat="tile in sections.Tiles">
-                    <div class="tile {{tile.Color}}">
-                        <div class="borderColor backColor {{tile.Size}}">
-                            <div class="back">
-                                <span class="id" style="visibility:collapse">{{tile.Id}}</span>
-                                <span class="url" style="visibility:collapse">{{tile.Url}}</span>
-                                <div class="title">{{tile.Title}}</div>
-                                <div class="content" ng-include="/home/tilerender/{{tile.Id}}">
+        <div id="section{{section.Id}}" class="gridSection" ng-repeat="section in sections" ng-style="{'width':section.Width, 'height':section.Height}" style="position: relative">
+            <div class="tile {{tile.Color | ColorCss}}" ng-repeat="tile in section.Tiles" ng-style="{'left':tile.Left, 'top':tile.Top}" style="position:absolute">
+                <div class="borderColor backColor {{tile.Size | ColorCss}}">
+                    <div class="back">
+                        <span class="id" style="visibility:collapse">{{tile.Id}}</span>
+                        <span class="url" style="visibility:collapse">{{tile.Url}}</span>
+                        <div class="title">{{tile.Title}}</div>
+                        <div class="content" ng-include="'/home/tilerender/'tile.Id">
 
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="clear"></div>
             </div>
+            <div class="clear"></div>
         </div>
     </div>
 </div>
