--- a/Dommy.Web/Views/Shared/_Layout.cshtml
+++ b/Dommy.Web/Views/Shared/_Layout.cshtml
@@ -4,12 +4,13 @@
 
 <!DOCTYPE html>
 
-<html ng-app>
+<html ng-app="dommy">
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>_Layout</title>
     <script src="~/Scripts/jquery-2.1.0.min.js" type="text/javascript"></script>
     <script src="~/Scripts/jquery.signalR-2.0.2.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/angular.min.js" type="text/javascript"></script>
     <script src="http://localhost:5557/signalr/hubs" type="text/javascript"></script> 
     <link href="~/Css/Dommy.min.css" rel="stylesheet" type="text/css" />
 
