--- a/Dommy.Web/Views/Shared/_Layout.cshtml
+++ b/Dommy.Web/Views/Shared/_Layout.cshtml
@@ -11,11 +11,11 @@
     <script src="~/Scripts/jquery-2.1.0.min.js" type="text/javascript"></script>
     <script src="~/Scripts/jquery.signalR-2.0.2.min.js" type="text/javascript"></script>
     <script src="~/Scripts/angular.min.js" type="text/javascript"></script>
-    <script src="http://localhost:5557/signalr/hubs" type="text/javascript"></script> 
+    <script src="http://@Context.Request.Url.Host:5557/signalr/hubs" type="text/javascript"></script> 
     <link href="~/Css/Dommy.min.css" rel="stylesheet" type="text/css" />
 
     <script type="text/javascript">
-        $.connection.hub.url = "http://localhost:5557/signalr";
+        $.connection.hub.url = "http://@Context.Request.Url.Host:5557/signalr";
         $(document).load(function () {
         });
     </script>
